# DevSecOps

./: .safety-project.ini  pyproject.toml
.github/workflows/: main.yml
src/: app.py
src/templates/: index.html
tests/: test_app.py
